@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-23T16:16:40Z",
-  "count_outdated" : 351,
-  "uniques_outdated" : 189,
-  "count" : 377,
+  "timestamp" : "2022-06-24T01:00:04Z",
+  "count_outdated" : 353,
+  "uniques_outdated" : 190,
+  "count" : 379,
   "uniques" : 205,
   "clones" : [
-    {
-      "timestamp": "2022-06-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-10T00:00:00Z",
       "count": 2,
@@ -98,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
